[gd_scene load_steps=16 format=3 uid="uid://ppcmqjbug43q"]

[ext_resource type="Script" uid="uid://bephxqvk7i588" path="res://scripts/masks_code/mask_demo.gd" id="1_fvhkg"]
[ext_resource type="Texture2D" uid="uid://ctfukfall2x00" path="res://scenes/masks_background/blank_menu_bkgrnd.png" id="2_2msn8"]
[ext_resource type="Texture2D" uid="uid://dposj3jx41rg" path="res://assets/masks_assets_other/franenkstein_sticker_final.png" id="3_rau0m"]
[ext_resource type="Texture2D" uid="uid://bu5tjgs1f4hxs" path="res://assets/masks_assets_other/pressed_franenstein.png" id="4_pl2sm"]
[ext_resource type="Texture2D" uid="uid://blmgpxxj4vp6n" path="res://assets/masks_assets_other/hover_franenstein.png" id="5_t65ta"]
[ext_resource type="Texture2D" uid="uid://bao2ql8ekh0d0" path="res://assets/masks_assets_other/disable_franenstein.png" id="6_550xn"]
[ext_resource type="Texture2D" uid="uid://cp17p6kwc7x35" path="res://assets/masks_assets_other/vampire_org.png" id="7_3dmre"]
[ext_resource type="Texture2D" uid="uid://c5xaixefgm1v4" path="res://assets/masks_assets_other/pressed_vampire.png" id="8_mikpj"]
[ext_resource type="Texture2D" uid="uid://dwr88kulvmjds" path="res://assets/masks_assets_other/hover_vampire.png" id="9_5e2pj"]
[ext_resource type="Texture2D" uid="uid://cmbwtoa7low8s" path="res://assets/masks_assets_other/disable_vampire.png" id="10_ny56m"]
[ext_resource type="Texture2D" uid="uid://cgrlgit1645n2" path="res://assets/masks_assets_other/werewolf_org.png" id="11_nivrl"]
[ext_resource type="Texture2D" uid="uid://cikiga22v0u6v" path="res://assets/masks_assets_other/pressed_werewolf.png" id="12_385fc"]
[ext_resource type="Texture2D" uid="uid://dbuvw8naeeo83" path="res://assets/masks_assets_other/hover_werewolf.png" id="13_ehubh"]
[ext_resource type="Texture2D" uid="uid://b8jn275nox557" path="res://assets/masks_assets_other/disbale_werewolf.png" id="14_7bysv"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gpvn3"]
texture = ExtResource("2_2msn8")

[node name="mask_demo_test" type="Node2D"]
script = ExtResource("1_fvhkg")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -16.0
offset_top = -12.0
offset_right = 1169.0
offset_bottom = 659.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_gpvn3")

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 391.0
offset_top = 55.0
offset_right = 743.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Welcome to Mask_demo"
horizontal_alignment = 1
vertical_alignment = 1

[node name="franenstein_Button" type="TextureButton" parent="."]
offset_left = 57.0
offset_top = 177.0
offset_right = 357.0
offset_bottom = 470.0
texture_normal = ExtResource("3_rau0m")
texture_pressed = ExtResource("4_pl2sm")
texture_hover = ExtResource("5_t65ta")
texture_disabled = ExtResource("6_550xn")

[node name="vampire_Button" type="TextureButton" parent="."]
offset_left = 435.0
offset_top = 179.0
offset_right = 735.5
offset_bottom = 454.0
texture_normal = ExtResource("7_3dmre")
texture_pressed = ExtResource("8_mikpj")
texture_hover = ExtResource("9_5e2pj")
texture_disabled = ExtResource("10_ny56m")

[node name="warewolf_Button" type="TextureButton" parent="."]
offset_left = 808.0
offset_top = 172.0
offset_right = 1067.0
offset_bottom = 472.0
texture_normal = ExtResource("11_nivrl")
texture_pressed = ExtResource("12_385fc")
texture_hover = ExtResource("13_ehubh")
texture_disabled = ExtResource("14_7bysv")

[node name="Label2" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 462.0
offset_top = 543.0
offset_right = 679.0
offset_bottom = 588.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "please pick one of the masks below"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="franenstein_Button" to="." method="_on_franenstein_texture_button_pressed"]
[connection signal="pressed" from="vampire_Button" to="." method="_on_vampire_texture_button_pressed"]
[connection signal="pressed" from="warewolf_Button" to="." method="_on_warewolf_texture_button_pressed"]
